Fix #wrapper have overflow

--- a/static/style.css
+++ b/static/style.css
@@ -30,6 +30,7 @@ html, body {
   padding: 0;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 body,
@@ -59,8 +60,7 @@ body,
   align-items: center;
   width: 100dvw;
   height: 100dvh;
-  position: relative;
-  overflow: hidden;
+  position: absolute;
   transition: all 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
 
